--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -9,6 +9,10 @@
 
 #profile-data div{
     word-break: break-all;
+
+    #leave-campaign-form strong{
+        word-break: initial;
+    }
 }
 
 @media(max-width: $small-screen){
