--- a/src/app/components/articles/campaign-overview/campaign-overview.component.html
+++ b/src/app/components/articles/campaign-overview/campaign-overview.component.html
@@ -6,6 +6,11 @@
 >
   <div class="row mx-0" id="campaign-overview-heading">
     <div id="heading-buttons">
+      <a [routerLink]="profileUrl" class="btn btn-secondary mx-2">
+        <i class="fa fa-user"></i>
+        <span> Profile</span> 
+      </a>
+
       <a (click)="logout()" class="btn btn-secondary mx-2">
         <i class="fas fa-sign-out-alt"></i>
         <span> Logout</span> 
