FIX borked image url generation

--- a/src/app/components/utility/image-carousel/image-carousel.component.html
+++ b/src/app/components/utility/image-carousel/image-carousel.component.html
@@ -34,7 +34,7 @@
       >
         <div class="image-container" [title]="image.name">
           <img
-            [src]="constants.wikiUrl + image.image"
+            [src]="constants.wikiUrl + image"
             alt="Image {{ i }} of the character"
           />
         </div>
