FIX location link

--- a/src/app/components/articles/character-article/character-article.component.html
+++ b/src/app/components/articles/character-article/character-article.component.html
@@ -48,7 +48,7 @@
                 <div *ngIf="articleData.current_location" class="col">
                     Last known location:
                     <a routerLink="{{ locationUrl }}">
-                        <strong> {{ articleData.current_location_details.name_full }} </strong>
+                        <strong> {{ articleData.current_location_details.name }} </strong>
                     </a>
                 </div>
             </div>
