--- a/src/app/components/utility/delete-toggle/delete-toggle.component.html
+++ b/src/app/components/utility/delete-toggle/delete-toggle.component.html
@@ -4,10 +4,10 @@
     [message]="deleteMessage"
     (confirmationEvent)="emitDeleteEvent()"
     >
-        <inactiveButton>
+        <div id="inactiveButton">
             <div class="btn btn-outline-danger">
                 <i class="fa fa-trash"></i>
             </div> 
-        </inactiveButton>
+        </div>
     </app-animated-toggle>
 </ng-container>
