--- a/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
+++ b/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
@@ -75,7 +75,7 @@
         *ngIf="isInDisplayState()"
         [initialText]="cardData.description"
         [allowEdit]="false"
-        (updateText)="onSubmit($event)"
+        (updateText)="onSubmit()"
       ></app-textfield>
 
       <app-formly-formcontainer
