--- a/src/app/components/utility/dumb-components/animated-toggle/animated-toggle.component.html
+++ b/src/app/components/utility/dumb-components/animated-toggle/animated-toggle.component.html
@@ -4,7 +4,7 @@
 
 <ng-template #inactiveToggle>
   <div (click)="toggleState()">
-    <ng-content select="inactiveButton"></ng-content>
+    <ng-content select="#inactiveButton"></ng-content>
   </div>
 </ng-template>
 
