--- a/src/app/components/utility/encounter-accordion/encounter-accordion.component.html
+++ b/src/app/components/utility/encounter-accordion/encounter-accordion.component.html
@@ -89,7 +89,7 @@
                 <!-- Encounter Footer/Delete Toggle -->
                 <app-delete-toggle
                 [deleteMessage]="'Delete this encounter?'"
-                (deleteEvent)="deleteEncounter()"
+                (deleteEvent)="deleteEncounter(encounter)"
                 class="col-md-9 float-right px-0"
                 ></app-delete-toggle>
 
