--- a/src/app/components/utility/session-update-modal/session-update-modal.component.html
+++ b/src/app/components/utility/session-update-modal/session-update-modal.component.html
@@ -40,3 +40,6 @@
     [ngClass]="{'d-none': !model}"
     ></div>
 </div>
+
+<!-- Loading Spinner -->
+<ng-template #loading><app-spinner></app-spinner></ng-template>
