--- a/src/app/components/utility/recently-updated-articles-list/recently-updated-articles-list.component.html
+++ b/src/app/components/utility/recently-updated-articles-list/recently-updated-articles-list.component.html
@@ -14,7 +14,7 @@
             >
                 <!-- Heading -->
                 <header class="card-img-top d-flex align-items-center justify-content-center">
-                    <img *ngIf="article.image_url else defaultIcon"  src="{{constants.wikiUrl}}{{ article.image_url }}" alt="article image" class="">
+                    <img *ngIf="article.image_url else defaultIcon"  [src]="constants.wikiUrl + article.image_url" alt="article image" class="">
                     <ng-template #defaultIcon>
                         <i class="fa-4x {{ getArticleTypeMetaData(article.article_type).iconClass }}"></i>
                     </ng-template>    
