REFACTOR to add type safety

--- a/src/app/components/articles/character-article/character-article.component.html
+++ b/src/app/components/articles/character-article/character-article.component.html
@@ -79,7 +79,7 @@
         <!-- Items -->
         <div class="mb-5">
             <app-object-list    
-            [articleType]="'item'" 
+            [articleType]="OverviewType.Item" 
             [createLink]="itemCreateUrl"
             [heading]="'Items of Note'"
             [items]="articleData.items"
