--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -78,7 +78,7 @@
       <app-object-list
         [heading]="'Characters of Interest'"
         [items]="articleData.characters"
-        [articleType]="'character'"
+        [articleType]="OverviewType.Character"
         [createLink]="characterCreateUrl"
       ></app-object-list>
     </div>
