--- a/src/app/components/articles/organization-article/organization-article.component.html
+++ b/src/app/components/articles/organization-article/organization-article.component.html
@@ -65,7 +65,7 @@
             [heading]="'Members'"
             [items]="articleData.members"
             [createLink]="characterCreateUrl"
-            [articleType]="'character'"
+            [articleType]="OverviewType.Character"
             ></app-object-list>
         </div>
 
