--- a/src/app/components/utility/object-list/object-list.component.html
+++ b/src/app/components/utility/object-list/object-list.component.html
@@ -7,8 +7,8 @@
     </h4>
     <!-- List -->
     <ul>
-        <li *ngFor="let item of items">
-            <a routerLink="{{constants.wikiUrlFrontendPrefix}}/{{articleType}}/{{campaign}}/{{item.name}}">
+        <li *ngFor="let item of items; let index = index">
+            <a [routerLink]="itemLinks[index]">
                 {{item.name}}
                 <ng-container *ngIf="!!item.role">
                     ({{ item.role}})
