FIX borked colors for ngbtooltip

--- a/src/app/components/articles/admin/admin.component.html
+++ b/src/app/components/articles/admin/admin.component.html
@@ -52,16 +52,26 @@
                 <div class="row">
                     <h4 class="col-5 col-md-3 d-flex flex-column">
                         <div>
-                            <span class="fa fa-user-circle" placement="top" [ngbTooltip]="'Username'"></span>
+                            <span class="fa fa-user-circle" 
+                            placement="top" 
+                            [tooltipClass]="'my-tooltip'" 
+                            [ngbTooltip]="'Username'"></span>
                             Name
                         </div>
                     </h4>
                     <h4 class="col-6 col-md-5">
-                        <span class="fa fa-group" placement="top" [ngbTooltip]="'Access-right groups'"></span>
+                        <span class="fa fa-group" 
+                        placement="top" 
+                        [ngbTooltip]="'Access-right groups'"
+                        [tooltipClass]="'my-tooltip'"></span>
                         Groups
                     </h4>
                     <h4 class="col-3 hide-on-mobile">
-                        <span class="fa fa-envelope-o" placement="top" [ngbTooltip]="'Email-Address'"></span>
+                        <span 
+                        class="fa fa-envelope-o" 
+                        placement="top" 
+                        [ngbTooltip]="'Email-Address'"
+                        [tooltipClass]="'my-tooltip'"></span>
                         Email
                     </h4>
                 </div>
