--- a/src/app/components/utility/formly-formcontainer/formly-formcontainer.component.html
+++ b/src/app/components/utility/formly-formcontainer/formly-formcontainer.component.html
@@ -11,7 +11,8 @@
     *ngIf="!form.valid && enableSubmitButtons"
     class="btn btn-dark strikethrough" 
     placement="top" 
-    ngbTooltip="The form is not yet correctly filled out!"
+    [ngbTooltip]="'The form is not yet correctly filled out!'"
+    [tooltipClass]="'my-tooltip'"
     >
         <i class="fa fa-lock mr-2" aria-hidden="true"></i>
         Submit *
