--- a/src/app/components/utility/tooltip-infocircle/tooltip-infocircle.component.html
+++ b/src/app/components/utility/tooltip-infocircle/tooltip-infocircle.component.html
@@ -1,1 +1,5 @@
-<sup class="fas fa-info-circle icon" [ngbTooltip]="tooltipMessage"></sup>
+<sup 
+class="fas fa-info-circle icon" 
+[ngbTooltip]="tooltipMessage"
+[tooltipClass]="'my-tooltip'"
+></sup>
